// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fretboard component with type strings, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 5,
        "openWidth": 10,
        "stringHeight": 40,
      },
      "highlight": Object {
        "oct2": "blue",
        "oct3": "dodgerblue",
        "oct4": "lightblue",
        "oct5": "lightgray",
        "selected": "orange",
      },
    }
  }
>
  <styled.div
    height={240}
  >
    <ViewPortMain>
      <OpenPosition
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        width={10}
      />
      <Nut
        offset={10}
        width={5}
      />
      <Board
        nrOfFrets={12}
        offset={15}
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        type="strings"
        width={85}
      />
    </ViewPortMain>
  </styled.div>
</ThemeProvider>
`;

exports[`Fretboard component, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 5,
        "openWidth": 10,
        "stringHeight": 40,
      },
      "highlight": Object {
        "oct2": "blue",
        "oct3": "dodgerblue",
        "oct4": "lightblue",
        "oct5": "lightgray",
        "selected": "orange",
      },
    }
  }
>
  <styled.div
    height={240}
  >
    <ViewPortMain>
      <OpenPosition
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        width={10}
      />
      <Nut
        offset={10}
        width={5}
      />
      <Board
        nrOfFrets={12}
        offset={15}
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        type="boxes"
        width={85}
      />
    </ViewPortMain>
  </styled.div>
</ThemeProvider>
`;
